# AssessingConditionModel

./: .env  .gitignore  AssessingConditionModel.sln  Jenkinsfile  Makefile  README.md  docker-compose.dcproj  docker-compose.env.yml  docker-compose.override.yml  docker-compose.yml  initSettingsUp.bat  launchSettings.json
AssessingConditionModel/: AssessingConditionModel.csproj  Program.cs  Startup.cs  appsettings.json
InfluenceCalculator.API/: Dockerfile  InfluenceCalculator.API.csproj  Program.cs  appsettings.json
InfluenceCalculator.UnitTests/: InfluenceCalculator.UnitTests.csproj  InfluenceCalculatorControllerTests.cs
InfluenceModel.UnitTests/: UnitTest1.cs
Interfaces/: ASMLib.csproj  Attributes.cs  Enums.cs  Exceptions.cs  Extensions.cs  IAgentKey.cs  IAgentPropertiesNamesSettings.cs  IAgingDynamics.cs  IAgingPatientState.cs  IAgingState.cs  IBioAgeCalculationParameters.cs  IExecutableAgentCodeSettings.cs  IFileData.cs  IInfluence.cs  IInfluenceResult.cs  IParameterDynamic.cs  IPatient.cs  IPatientData.cs  IPatientMeta.cs  IPatientParameter.cs  IPredictRequest.cs  IRabbitMqConfiguration.cs  IRepository.cs  ITest.cs  IUpdatePatientsInfo.cs  IWebRequester.cs  Interfaces.csproj  NoAllowToSelectAttribute.cs  (+1 more)
pg_init/: init.sql
src/Services/BioAge.MLServer/: Dockerfile  pyproject.toml  requirements.txt
src/Services/BioAge.MLServer/bioage_mlserver/: db_connection.py  model_provider.py  server.py
src/Services/BioAge.MLServer/bioage_mlserver/models/: active_model.py  biomarker_meta.py  model_meta.py
src/Services/BioAge.MLServer/tests/: test_bioage_mlserver.py
(+885 files in other folders)
